Migrated to use thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,5 @@ spring.jpa.generate-ddl=false
 #END H2 DB COnfig
 
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web.*=INFO
+
